# TaskAssign

./: README.md
AuctionAssign/: CMakeLists.txt  package.xml  readme.txt
AuctionAssign/config/: goal_topo_shape.yaml
AuctionAssign/include/: auction.h  centralize_auction.h
AuctionAssign/launch/: launch_centralize_assign.launch
AuctionAssign/msg/: DetectInfo.msg  OdomInfo.msg
AuctionAssign/src/: auction.cpp  centralize_auction.cpp  sim_pub.cpp  test.cpp
IntegerOptimization/: CMakeLists.txt  package.xml  readme.md
IntegerOptimization/config/: planning_config.xml
IntegerOptimization/include/: firepower_allocation.h  waypoint.h
IntegerOptimization/include/dubins_curves/: dubins.h  dubins_primitive.hpp
IntegerOptimization/include/ipsolve/: lp_lib.h
IntegerOptimization/msg/: formation.msg
IntegerOptimization/scripts/: draw_res.asv  draw_res.m  importfile.m
IntegerOptimization/src/: dubins_primitive.cpp  firepower_allocation.cpp  main.cpp
