<?xml version="1.0"?>
<package format="2">
  <name>IntegerOptimization</name>
  <version>0.1.0</version>
  <description>The firepower allocation package</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

